--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-deep-analysis">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data-analysis">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
